# mlogpp

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
.github/actions/setup-bazel/: action.yml
.github/workflows/: main.yml
benchmark/: BUILD.bazel  README.md  log_benchmark.cpp
examples/: BUILD  BUILD.bazel  async_sink.cpp  custom_sink.cpp  example.cpp  static_filter.cpp
src/: BUILD  BUILD.bazel  file_sink.hpp  filter.hpp  fmt_string_with_location.hpp  formatter.hpp  level.hpp  logger.hpp  record.hpp  registry.hpp  registry_impl.cpp  sink.hpp
src/format/: formatter.hpp  json_escape.hpp  json_formatter.hpp
src/sink/: async_sink.cpp  async_sink.hpp  file_sink.hpp  sink.hpp
test/: BUILD.bazel  test_formatter.cpp
test/filter/: BUILD.bazel  test_filter.cpp
test/formatter/: BUILD.bazel  test_default_formatter.cpp  test_json_escape.cpp  test_json_formatter.cpp
test/level/: BUILD.bazel  test_level.cpp
test/logger/: BUILD.bazel  test_logger.cpp
test/registry/: BUILD.bazel  test_registry.cpp
test/sink/: BUILD.bazel  test_sink.cpp
tools/: gen_coverage.sh  run_clang_tidy.sh
