module(
    name = "mlogpp",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "platforms", version = "1.1.0")

# GCC toolchain
bazel_dep(name = "gcc_toolchain", dev_dependency = True)
git_override(
    module_name = "gcc_toolchain",
    commit = "2cd8884a7f8212fdfcd6c9cd81f7bf11089ce93c",
    remote = "https://github.com/f0rmiga/gcc-toolchain.git",
)

gcc_toolchains = use_extension(
    "@gcc_toolchain//toolchain:module_extensions.bzl",
    "gcc_toolchains",
    dev_dependency = True,
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    target_arch = "x86_64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")

# LLVM toolchain
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.4",
    stdlib = {
        "linux-x86_64": "stdc++",
    },
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
