load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "mlogpp_common",
    hdrs = [
        ":level.hpp",
        ":record.hpp",
    ],
    include_prefix = "mlogpp",
)

cc_library(
    name = "mlogpp_formatter",
    hdrs = [
        ":format/formatter.hpp",
        ":format/json_escape.hpp",
        ":format/json_formatter.hpp",
    ],
    include_prefix = "mlogpp",
    deps = [":mlogpp_common"],
)

cc_library(
    name = "mlogpp_sinks",
    hdrs = [
        ":sink/file_sink.hpp",
        ":sink/sink.hpp",
    ],
    include_prefix = "mlogpp",
)

cc_library(
    name = "mlogpp_async_sink",
    srcs = [":sink/async_sink.cpp"],
    hdrs = [":sink/async_sink.hpp"],
    include_prefix = "mlogpp",
    deps = [
        ":mlogpp_common",
        ":mlogpp_formatter",
        ":mlogpp_sinks",
    ],
)

cc_library(
    name = "mlogpp",
    srcs = [
        ":registry_impl.cpp",
    ],
    hdrs = [
        ":filter.hpp",
        ":fmt_string_with_location.hpp",
        ":logger.hpp",
        ":registry.hpp",
    ],
    include_prefix = "mlogpp",
    visibility = ["//visibility:public"],
    deps = [
        ":mlogpp_async_sink",
        ":mlogpp_formatter",
        ":mlogpp_sinks",
    ],
)
