load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "test_default_formatter",
    size = "small",
    srcs = [":test_default_formatter.cpp"],
    deps = [
        "//src:mlogpp",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_json_formatter",
    size = "small",
    srcs = [":test_json_formatter.cpp"],
    deps = [
        "//src:mlogpp",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
